[package]
name = "ogronman-hash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "DatabaseThing"
path = "src/main.rs"

[lib]
name = "hashlib"
path = "src/hashlib/src/lib.rs"